tests/paczka2/big_fuzzy/94669839.err
Error in line 1: A590 A55 33,1
Error in line 3: A590 A590 23,6
Error in line 13: A590 A65 45,3
Error in line 18: Rh2vks A55 42,9
Error in line 40: Rh2vks S519 87,8
Error in line 39: eKU A590 35,4
Error in line 44: Rh2vks A65 84,5
Error in line 46: A590 S519 50,6
Error in line 47: LXrPO16ZQ A55 194,5
Error in line 55: eKU S519 61,0
Error in line 51: OQuA76D A590 11,2
Error in line 58: Pdm1p A55 23,9
Error in line 60: Pdm1p A590 3,8
Error in line 63: OQuA76D A55 40,4
Error in line 70: A590 A590 4,6
Error in line 56: eKU A55 57,2
Error in line 52: LXrPO16ZQ A590 83,2
Error in line 89: Rh2vks S519 51,4
Error in line 88: LXrPO16ZQ A65 22,7
Error in line 96: A590 A55 70,6
Error in line 119: Pdm1p A65 9&,&
Error in line 111: Pdm1p A55 72,9
Error in line 140: A590 A590 33,5
Error in line 144: S0sf5IOe7 A55 87,4
Error in line 154: A590 S519 61,3
Error in line 160: LXrPO16ZQ S519 10,7
Error in line 167: eKU S519 42,9
Error in line 176: A59- S519 99,5
Error in line 158: Rh2vks A65 356,4
Error in line 171: LXrPO16ZQ A590 37,9
Error in line 180: Rh2vks A590 59,0
Error in line 194: S0sf5IOe7 A65 262,23
Error in line 188: S0sf5IOe7 A65 76,7
Error in line 196: S0sf5IOe7 S519 63,7
Error in line 191: LXrPO16ZQ A590 19,8
Error in line 209: OQuA76D A590 17,62
Error in line 207: LXrPO16ZQ A65 130,4
Error in line 213: A590 A590 88,8
Error in line 247: Pdm1p S519 32,9
